--- a/frontend/admin_add_lecture.html
+++ b/frontend/admin_add_lecture.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Add Lecture - Attendance System</title>
+    <title>Add Lecture - Admin Panel</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -20,40 +20,48 @@
     </nav>
     <div class="container">
         <header>
-            <h1>Add Lecture Slot</h1>
+            <h1>Add Lecture</h1>
         </header>
         <div class="panel">
-            <form id="lectureForm" onsubmit="addLecture(event)">
+            <form id="lectureForm">
                 <div class="form-group">
-                    <label for="classId">Select Class:</label>
-                    <select id="classId" required>
+                    <label for="lectureName">Lecture Name</label>
+                    <input type="text" id="lectureName" required>
+                </div>
+                <div class="form-group">
+                    <label for="lectureClass">Class</label>
+                    <select id="lectureClass" required>
                         <option value="">Select Class</option>
                     </select>
                 </div>
                 <div class="form-group">
-                    <label for="date">Date:</label>
-                    <input type="date" id="date" required>
+                    <label for="lectureTime">Time</label>
+                    <input type="time" id="lectureTime" required>
                 </div>
                 <div class="form-group">
-                    <label for="time">Time:</label>
-                    <input type="time" id="time" required>
+                    <label for="lectureDay">Day</label>
+                    <select id="lectureDay" required>
+                        <option value="">Select Day</option>
+                        <option value="Monday">Monday</option>
+                        <option value="Tuesday">Tuesday</option>
+                        <option value="Wednesday">Wednesday</option>
+                        <option value="Thursday">Thursday</option>
+                        <option value="Friday">Friday</option>
+                        <option value="Saturday">Saturday</option>
+                        <option value="Sunday">Sunday</option>
+                    </select>
                 </div>
-                <div class="form-group">
-                    <label for="subject">Subject:</label>
-                    <input type="text" id="subject" required>
-                </div>
-                <button type="submit">Add Lecture Slot</button>
+                <button type="submit">Add Lecture</button>
             </form>
-
             <div id="lectureList" class="section">
-                <h2>Existing Lecture Slots</h2>
+                <h2>Existing Lectures</h2>
                 <table id="lectureTable">
                     <thead>
                         <tr>
-                            <th>Date</th>
-                            <th>Time</th>
-                            <th>Subject</th>
+                            <th>Name</th>
                             <th>Class</th>
+                            <th>Time</th>
+                            <th>Day</th>
                             <th>Actions</th>
                         </tr>
                     </thead>
@@ -62,24 +70,27 @@
             </div>
         </div>
     </div>
+    <script src="js/config.js"></script>
     <script>
         // Load classes and lectures when page loads
-        document.addEventListener('DOMContentLoaded', function() {
+        document.addEventListener('DOMContentLoaded', () => {
             loadClasses();
             loadLectures();
+            // Add form submit handler
+            document.getElementById('lectureForm').addEventListener('submit', addLecture);
         });
 
         function loadClasses() {
-            fetch('http://localhost:5004/api/classes')
+            fetch(`${API_CONFIG.CLASS_SERVICE}/api/classes`)
                 .then(response => response.json())
                 .then(classes => {
-                    const classSelect = document.getElementById('classId');
-                    classSelect.innerHTML = '<option value="">Select Class</option>';
+                    const select = document.getElementById('lectureClass');
+                    select.innerHTML = '<option value="">Select Class</option>';
                     classes.forEach(classItem => {
                         const option = document.createElement('option');
                         option.value = classItem.id;
                         option.textContent = classItem.name;
-                        classSelect.appendChild(option);
+                        select.appendChild(option);
                     });
                 })
                 .catch(error => {
@@ -89,7 +100,7 @@
         }
 
         function loadLectures() {
-            fetch('http://localhost:5002/api/lectures')
+            fetch(`${API_CONFIG.LECTURE_SERVICE}/api/lectures`)
                 .then(response => response.json())
                 .then(lectures => {
                     const tbody = document.getElementById('lectureTableBody');
@@ -97,12 +108,12 @@
                     lectures.forEach(lecture => {
                         const row = document.createElement('tr');
                         row.innerHTML = `
-                            <td>${lecture.date}</td>
+                            <td>${lecture.name}</td>
+                            <td>${lecture.class_name || 'Not Assigned'}</td>
                             <td>${lecture.time}</td>
-                            <td>${lecture.subject}</td>
-                            <td>${lecture.class_name || 'N/A'}</td>
+                            <td>${lecture.day}</td>
                             <td>
-                                <button onclick="editLecture(${lecture.id}, '${lecture.date}', '${lecture.time}', '${lecture.subject}', ${lecture.class_id})" class="btn-edit">Edit</button>
+                                <button onclick="editLecture(${lecture.id}, '${lecture.name}', ${lecture.class_id || 'null'}, '${lecture.time}', '${lecture.day}')" class="btn-edit">Edit</button>
                                 <button onclick="deleteLecture(${lecture.id})" class="btn-delete">Delete</button>
                             </td>
                         `;
@@ -117,17 +128,17 @@
 
         function addLecture(event) {
             event.preventDefault();
-            const date = document.getElementById('date').value;
-            const time = document.getElementById('time').value;
-            const subject = document.getElementById('subject').value;
-            const classId = document.getElementById('classId').value;
+            const name = document.getElementById('lectureName').value;
+            const classId = document.getElementById('lectureClass').value;
+            const time = document.getElementById('lectureTime').value;
+            const day = document.getElementById('lectureDay').value;
 
-            fetch('http://localhost:5002/api/lectures', {
+            fetch(`${API_CONFIG.LECTURE_SERVICE}/api/lectures`, {
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/json'
                 },
-                body: JSON.stringify({ date, time, subject, class_id: classId })
+                body: JSON.stringify({ name, class_id: classId, time, day })
             })
             .then(response => response.json())
             .then(data => {
@@ -140,32 +151,32 @@
             });
         }
 
-        function editLecture(id, date, time, subject, classId) {
+        function editLecture(id, name, classId, time, day) {
             // Populate form with lecture data
-            document.getElementById('date').value = date;
-            document.getElementById('time').value = time;
-            document.getElementById('subject').value = subject;
-            document.getElementById('classId').value = classId;
+            document.getElementById('lectureName').value = name;
+            document.getElementById('lectureClass').value = classId;
+            document.getElementById('lectureTime').value = time;
+            document.getElementById('lectureDay').value = day;
             
             // Change form submit handler
             const form = document.getElementById('lectureForm');
             form.onsubmit = function(event) {
                 event.preventDefault();
-                const updatedDate = document.getElementById('date').value;
-                const updatedTime = document.getElementById('time').value;
-                const updatedSubject = document.getElementById('subject').value;
-                const updatedClassId = document.getElementById('classId').value;
+                const updatedName = document.getElementById('lectureName').value;
+                const updatedClassId = document.getElementById('lectureClass').value;
+                const updatedTime = document.getElementById('lectureTime').value;
+                const updatedDay = document.getElementById('lectureDay').value;
 
-                fetch(`http://localhost:5002/api/lectures/${id}`, {
+                fetch(`${API_CONFIG.LECTURE_SERVICE}/api/lectures/${id}`, {
                     method: 'PUT',
                     headers: {
                         'Content-Type': 'application/json'
                     },
                     body: JSON.stringify({ 
-                        date: updatedDate,
+                        name: updatedName, 
+                        class_id: updatedClassId,
                         time: updatedTime,
-                        subject: updatedSubject,
-                        class_id: updatedClassId
+                        day: updatedDay
                     })
                 })
                 .then(response => response.json())
@@ -182,8 +193,8 @@
         }
 
         function deleteLecture(id) {
-            if (confirm('Are you sure you want to delete this lecture slot?')) {
-                fetch(`http://localhost:5002/api/lectures/${id}`, {
+            if (confirm('Are you sure you want to delete this lecture?')) {
+                fetch(`${API_CONFIG.LECTURE_SERVICE}/api/lectures/${id}`, {
                     method: 'DELETE'
                 })
                 .then(response => {
