--- a/frontend/admin_add_student.html
+++ b/frontend/admin_add_student.html
@@ -23,43 +23,30 @@
             <h1>Add Student</h1>
         </header>
         <div class="panel">
-            <form id="studentForm" onsubmit="return addStudent(event)">
+            <form id="studentForm">
                 <div class="form-group">
-                    <label for="rollNumber">Roll Number</label>
-                    <input type="text" id="rollNumber" required>
-                </div>
-                <div class="form-group">
-                    <label for="studentName">Full Name</label>
+                    <label for="studentName">Student Name</label>
                     <input type="text" id="studentName" required>
-                </div>
-                <div class="form-group">
-                    <label for="classSelect">Class</label>
-                    <select id="classSelect" required>
-                        <option value="">Select Class</option>
-                    </select>
                 </div>
                 <div class="form-group">
                     <label for="studentEmail">Email</label>
                     <input type="email" id="studentEmail" required>
                 </div>
                 <div class="form-group">
-                    <label for="studentPhone">Phone Number</label>
-                    <input type="tel" id="studentPhone" required>
-                </div>
-                <div class="form-group">
-                    <label for="studentAddress">Address</label>
-                    <input type="text" id="studentAddress" required>
+                    <label for="studentClass">Class</label>
+                    <select id="studentClass" required>
+                        <option value="">Select Class</option>
+                    </select>
                 </div>
                 <button type="submit">Add Student</button>
             </form>
-
             <div id="studentList" class="section">
                 <h2>Existing Students</h2>
                 <table id="studentTable">
                     <thead>
                         <tr>
                             <th>Name</th>
-                            <th>Roll Number</th>
+                            <th>Email</th>
                             <th>Class</th>
                             <th>Actions</th>
                         </tr>
@@ -69,24 +56,27 @@
             </div>
         </div>
     </div>
+    <script src="js/config.js"></script>
     <script>
         // Load classes and students when page loads
-        document.addEventListener('DOMContentLoaded', function() {
+        document.addEventListener('DOMContentLoaded', () => {
             loadClasses();
             loadStudents();
+            // Add form submit handler
+            document.getElementById('studentForm').addEventListener('submit', addStudent);
         });
 
         function loadClasses() {
-            fetch('http://localhost:5004/api/classes')
+            fetch(`${API_CONFIG.CLASS_SERVICE}/api/classes`)
                 .then(response => response.json())
                 .then(classes => {
-                    const classSelect = document.getElementById('classSelect');
-                    classSelect.innerHTML = '<option value="">Select Class</option>';
+                    const select = document.getElementById('studentClass');
+                    select.innerHTML = '<option value="">Select Class</option>';
                     classes.forEach(classItem => {
                         const option = document.createElement('option');
                         option.value = classItem.id;
                         option.textContent = classItem.name;
-                        classSelect.appendChild(option);
+                        select.appendChild(option);
                     });
                 })
                 .catch(error => {
@@ -96,7 +86,7 @@
         }
 
         function loadStudents() {
-            fetch('http://localhost:5001/api/students')
+            fetch(`${API_CONFIG.STUDENT_SERVICE}/api/students`)
                 .then(response => response.json())
                 .then(students => {
                     const tbody = document.getElementById('studentTableBody');
@@ -105,11 +95,11 @@
                         const row = document.createElement('tr');
                         row.innerHTML = `
                             <td>${student.name}</td>
-                            <td>${student.roll_number}</td>
-                            <td>${student.class_name || 'N/A'}</td>
+                            <td>${student.email}</td>
+                            <td>${student.class_name || 'Not Assigned'}</td>
                             <td>
-                                <button onclick="editStudent('${student.roll_number}', '${student.name}', ${student.class_id}, '${student.email}', '${student.phone}', '${student.address}')" class="btn-edit">Edit</button>
-                                <button onclick="deleteStudent('${student.roll_number}')" class="btn-delete">Delete</button>
+                                <button onclick="editStudent(${student.id}, '${student.name}', '${student.email}', ${student.class_id || 'null'})" class="btn-edit">Edit</button>
+                                <button onclick="deleteStudent(${student.id})" class="btn-delete">Delete</button>
                             </td>
                         `;
                         tbody.appendChild(row);
@@ -123,97 +113,54 @@
 
         function addStudent(event) {
             event.preventDefault();
-            const rollNumber = document.getElementById('rollNumber').value;
             const name = document.getElementById('studentName').value;
-            const classId = document.getElementById('classSelect').value;
             const email = document.getElementById('studentEmail').value;
-            const phone = document.getElementById('studentPhone').value;
-            const address = document.getElementById('studentAddress').value;
+            const classId = document.getElementById('studentClass').value;
 
-            console.log('Submitting student data:', {
-                roll_number: rollNumber,
-                name: name,
-                class_id: classId,
-                email: email,
-                phone: phone,
-                address: address
-            });
-
-            fetch('http://localhost:5001/api/students', {
+            fetch(`${API_CONFIG.STUDENT_SERVICE}/api/students`, {
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/json'
                 },
-                body: JSON.stringify({ 
-                    roll_number: rollNumber,
-                    name: name,
-                    class_id: classId,
-                    email: email,
-                    phone: phone,
-                    address: address
-                })
+                body: JSON.stringify({ name, email, class_id: classId })
             })
-            .then(response => {
-                if (!response.ok) {
-                    return response.json().then(err => {
-                        throw new Error(err.error || 'Failed to add student');
-                    });
-                }
-                return response.json();
-            })
+            .then(response => response.json())
             .then(data => {
-                console.log('Student added successfully:', data);
                 document.getElementById('studentForm').reset();
                 loadStudents();
             })
             .catch(error => {
                 console.error('Error adding student:', error);
-                alert(error.message || 'Error adding student. Please try again.');
+                alert('Error adding student. Please try again.');
             });
-
-            return false;
         }
 
-        function editStudent(rollNumber, name, classId, email, phone, address) {
+        function editStudent(id, name, email, classId) {
             // Populate form with student data
-            document.getElementById('rollNumber').value = rollNumber;
             document.getElementById('studentName').value = name;
-            document.getElementById('classSelect').value = classId;
             document.getElementById('studentEmail').value = email;
-            document.getElementById('studentPhone').value = phone;
-            document.getElementById('studentAddress').value = address;
+            document.getElementById('studentClass').value = classId;
             
             // Change form submit handler
             const form = document.getElementById('studentForm');
             form.onsubmit = function(event) {
                 event.preventDefault();
                 const updatedName = document.getElementById('studentName').value;
-                const updatedClassId = document.getElementById('classSelect').value;
                 const updatedEmail = document.getElementById('studentEmail').value;
-                const updatedPhone = document.getElementById('studentPhone').value;
-                const updatedAddress = document.getElementById('studentAddress').value;
+                const updatedClassId = document.getElementById('studentClass').value;
 
-                fetch(`http://localhost:5001/api/students/${rollNumber}`, {
+                fetch(`${API_CONFIG.STUDENT_SERVICE}/api/students/${id}`, {
                     method: 'PUT',
                     headers: {
                         'Content-Type': 'application/json'
                     },
                     body: JSON.stringify({ 
-                        name: updatedName,
-                        class_id: updatedClassId,
+                        name: updatedName, 
                         email: updatedEmail,
-                        phone: updatedPhone,
-                        address: updatedAddress
+                        class_id: updatedClassId
                     })
                 })
-                .then(response => {
-                    if (!response.ok) {
-                        return response.json().then(err => {
-                            throw new Error(err.error || 'Failed to update student');
-                        });
-                    }
-                    return response.json();
-                })
+                .then(response => response.json())
                 .then(data => {
                     form.reset();
                     form.onsubmit = addStudent; // Reset form handler
@@ -221,15 +168,14 @@
                 })
                 .catch(error => {
                     console.error('Error updating student:', error);
-                    alert(error.message || 'Error updating student. Please try again.');
+                    alert('Error updating student. Please try again.');
                 });
-                return false;
             };
         }
 
-        function deleteStudent(rollNumber) {
+        function deleteStudent(id) {
             if (confirm('Are you sure you want to delete this student?')) {
-                fetch(`http://localhost:5001/api/students/${rollNumber}`, {
+                fetch(`${API_CONFIG.STUDENT_SERVICE}/api/students/${id}`, {
                     method: 'DELETE'
                 })
                 .then(response => {
@@ -253,3 +199,4 @@
     </script>
 </body>
 </html> 
+
