--- a/frontend/login.html
+++ b/frontend/login.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Admin Login - Attendance System</title>
+    <title>Login - Attendance System</title>
     <link rel="stylesheet" href="styles.css">
     <style>
         .navbar {
@@ -75,10 +75,8 @@
         </div>
     </nav>
     <div class="container">
-        <header>
+        <div class="login-panel">
             <h1>Admin Login</h1>
-        </header>
-        <div class="panel">
             <form id="loginForm">
                 <div class="form-group">
                     <label for="username">Username</label>
@@ -92,18 +90,21 @@
             </form>
         </div>
     </div>
+    <script src="js/config.js"></script>
     <script>
-    document.getElementById('loginForm').addEventListener('submit', function(e) {
-        e.preventDefault();
-        const username = document.getElementById('username').value.trim();
-        const password = document.getElementById('password').value.trim();
-        if (username === 'admin' && password === 'admin') {
-            sessionStorage.setItem('isAdminLoggedIn', 'true');
-            window.location.href = 'admin_add_class.html';
-        } else {
-            alert('Invalid username or password');
-        }
-    });
+        document.getElementById('loginForm').addEventListener('submit', function(event) {
+            event.preventDefault();
+            const username = document.getElementById('username').value;
+            const password = document.getElementById('password').value;
+
+            // For demo purposes, using a simple check
+            if (username === 'admin' && password === 'admin') {
+                sessionStorage.setItem('isAdminLoggedIn', 'true');
+                window.location.href = 'home.html';
+            } else {
+                alert('Invalid username or password');
+            }
+        });
     </script>
 </body>
 </html> 
