--- a/frontend/home.html
+++ b/frontend/home.html
@@ -9,7 +9,11 @@
 <body>
     <nav class="navbar">
         <a href="home.html" class="navbar-brand">Attendance System</a>
-        <div class="navbar-links">
+        <div class="navbar-links" id="userNav">
+            <a href="home.html">View Attendance</a>
+            <a href="#" onclick="logout()">Logout</a>
+        </div>
+        <div class="navbar-links" id="adminNav" style="display: none;">
             <a href="admin_add_class.html">Add Class</a>
             <a href="admin_add_student.html">Add Student</a>
             <a href="admin_add_lecture.html">Add Lecture</a>
@@ -23,7 +27,7 @@
             <h1>Attendance View</h1>
         </header>
         <div class="panel">
-            <div class="filter-controls">
+            <div class="filters">
                 <div class="form-group">
                     <label for="classFilter">Class</label>
                     <select id="classFilter">
@@ -36,12 +40,8 @@
                         <option value="">All Subjects</option>
                     </select>
                 </div>
-                <button onclick="searchAttendance()">Search</button>
-                <button onclick="resetFilters()">Reset</button>
             </div>
-            <div id="loadingIndicator" class="loading" style="display: none;">Loading...</div>
-            <div id="attendanceList" class="section">
-                <h2>Attendance Records</h2>
+            <div class="attendance-list">
                 <table id="attendanceTable">
                     <thead>
                         <tr>
@@ -59,146 +59,65 @@
     </div>
     <script src="js/config.js"></script>
     <script>
-        // Cache for storing data
-        const dataCache = {
-            classes: { data: null, timestamp: null },
-            students: { data: null, timestamp: null },
-            lectures: { data: null, timestamp: null },
-            attendance: { data: null, timestamp: null }
-        };
-        const CACHE_DURATION = 5 * 60 * 1000; // 5 minutes
-
-        // Load initial data when page loads
+        // Check if user is admin
         document.addEventListener('DOMContentLoaded', () => {
-            loadInitialData();
+            const isAdmin = sessionStorage.getItem('isAdminLoggedIn') === 'true';
+            document.getElementById('userNav').style.display = isAdmin ? 'none' : 'flex';
+            document.getElementById('adminNav').style.display = isAdmin ? 'flex' : 'none';
+            
+            loadClasses();
+            loadAttendance();
         });
 
-        async function fetchWithCache(url, cacheKey) {
-            const now = Date.now();
-            if (dataCache[cacheKey] && now - dataCache[cacheKey].timestamp < CACHE_DURATION) {
-                return dataCache[cacheKey].data;
-            }
-
-            const response = await fetch(url);
-            const data = await response.json();
-            dataCache[cacheKey] = {
-                data: data,
-                timestamp: now
-            };
-            return data;
-        }
-
-        async function loadInitialData() {
-            try {
-                const [classes, students, lectures, attendance] = await Promise.all([
-                    fetchWithCache(`${API_CONFIG.CLASS_SERVICE}/api/classes`, 'classes'),
-                    fetchWithCache(`${API_CONFIG.STUDENT_SERVICE}/api/students`, 'students'),
-                    fetchWithCache(`${API_CONFIG.LECTURE_SERVICE}/api/lectures`, 'lectures'),
-                    fetchWithCache(`${API_CONFIG.ATTENDANCE_SERVICE}/api/attendance`, 'attendance')
-                ]);
-
-                // Populate class filter
-                const classFilter = document.getElementById('classFilter');
-                classFilter.innerHTML = '<option value="">All Classes</option>';
-                classes.forEach(cls => {
-                    const option = document.createElement('option');
-                    option.value = cls.id;
-                    option.textContent = cls.name;
-                    classFilter.appendChild(option);
+        function loadClasses() {
+            fetch(`${API_CONFIG.CLASS_SERVICE}/api/classes`)
+                .then(response => response.json())
+                .then(classes => {
+                    const select = document.getElementById('classFilter');
+                    select.innerHTML = '<option value="">All Classes</option>';
+                    classes.forEach(classItem => {
+                        const option = document.createElement('option');
+                        option.value = classItem.id;
+                        option.textContent = classItem.name;
+                        select.appendChild(option);
+                    });
+                })
+                .catch(error => {
+                    console.error('Error loading classes:', error);
+                    alert('Error loading classes. Please try again.');
                 });
-
-                // Create lookup maps for faster access
-                dataCache.studentMap = new Map(students.map(s => [s.id, s]));
-                dataCache.lectureMap = new Map(lectures.map(l => [l.id, l]));
-                dataCache.classMap = new Map(classes.map(c => [c.id, c]));
-
-                // Display all attendance records
-                displayAttendanceRecords(attendance);
-            } catch (error) {
-                console.error('Error loading initial data:', error);
-                alert('Error loading data. Please refresh the page.');
-            }
         }
 
-        // Update subjects when class is selected
-        document.getElementById('classFilter').addEventListener('change', function() {
-            const classId = this.value;
-            const subjectFilter = document.getElementById('subjectFilter');
-            subjectFilter.innerHTML = '<option value="">All Subjects</option>';
-
-            if (classId) {
-                const classLectures = dataCache.lectures.data.filter(l => l.class_id == classId);
-                const subjects = [...new Set(classLectures.map(l => l.name))];
-                subjects.forEach(subject => {
-                    const option = document.createElement('option');
-                    option.value = subject;
-                    option.textContent = subject;
-                    subjectFilter.appendChild(option);
-                });
-            }
-        });
-
-        function displayAttendanceRecords(records) {
-            const tbody = document.getElementById('attendanceTableBody');
-            tbody.innerHTML = '';
-
-            if (records.length === 0) {
-                const row = document.createElement('tr');
-                row.innerHTML = '<td colspan="5" class="no-data">No records found</td>';
-                tbody.appendChild(row);
-                return;
-            }
-
-            // Sort records by date and time
-            records.sort((a, b) => {
-                const dateA = new Date(`${a.date} ${a.time}`);
-                const dateB = new Date(`${b.date} ${b.time}`);
-                return dateB - dateA;
-            });
-
-            records.forEach(record => {
-                const lecture = dataCache.lectureMap.get(record.lecture_id);
-                const student = dataCache.studentMap.get(record.student_id);
-                const row = document.createElement('tr');
-                row.innerHTML = `
-                    <td>${record.date}</td>
-                    <td>${record.time}</td>
-                    <td>${lecture ? lecture.name : 'N/A'}</td>
-                    <td>${student ? student.name : 'N/A'}</td>
-                    <td>${record.status}</td>
-                `;
-                tbody.appendChild(row);
-            });
-        }
-
-        function searchAttendance() {
+        function loadAttendance() {
             const classId = document.getElementById('classFilter').value;
             const subject = document.getElementById('subjectFilter').value;
 
-            let filteredRecords = dataCache.attendance.data;
-
-            if (classId) {
-                filteredRecords = filteredRecords.filter(record => {
-                    const lecture = dataCache.lectureMap.get(record.lecture_id);
-                    return lecture && lecture.class_id == classId;
+            fetch(`${API_CONFIG.ATTENDANCE_SERVICE}/api/attendance?class_id=${classId}&subject=${subject}`)
+                .then(response => response.json())
+                .then(records => {
+                    const tbody = document.getElementById('attendanceTableBody');
+                    tbody.innerHTML = '';
+                    records.forEach(record => {
+                        const row = document.createElement('tr');
+                        row.innerHTML = `
+                            <td>${record.date}</td>
+                            <td>${record.time}</td>
+                            <td>${record.subject}</td>
+                            <td>${record.student_name}</td>
+                            <td>${record.status}</td>
+                        `;
+                        tbody.appendChild(row);
+                    });
+                })
+                .catch(error => {
+                    console.error('Error loading attendance:', error);
+                    alert('Error loading attendance records. Please try again.');
                 });
-            }
-
-            if (subject) {
-                filteredRecords = filteredRecords.filter(record => {
-                    const lecture = dataCache.lectureMap.get(record.lecture_id);
-                    return lecture && lecture.name === subject;
-                });
-            }
-
-            displayAttendanceRecords(filteredRecords);
         }
 
-        function resetFilters() {
-            document.getElementById('classFilter').value = '';
-            document.getElementById('subjectFilter').value = '';
-            displayAttendanceRecords(dataCache.attendance.data);
-        }
+        // Add event listeners for filters
+        document.getElementById('classFilter').addEventListener('change', loadAttendance);
+        document.getElementById('subjectFilter').addEventListener('change', loadAttendance);
 
         function logout() {
             sessionStorage.removeItem('isAdminLoggedIn');
