--- a/frontend/home.html
+++ b/frontend/home.html
@@ -92,11 +92,36 @@
             const classId = document.getElementById('classFilter').value;
             const subject = document.getElementById('subjectFilter').value;
 
-            fetch(`${API_CONFIG.ATTENDANCE_SERVICE}/api/attendance?class_id=${classId}&subject=${subject}`)
+            let url = `${API_CONFIG.ATTENDANCE_SERVICE}/api/attendance`;
+            const params = new URLSearchParams();
+            
+            if (classId) params.append('class_id', classId);
+            if (subject) params.append('subject', subject);
+            
+            if (params.toString()) {
+                url += `?${params.toString()}`;
+            }
+
+            fetch(url)
                 .then(response => response.json())
                 .then(records => {
                     const tbody = document.getElementById('attendanceTableBody');
                     tbody.innerHTML = '';
+
+                    if (records.length === 0) {
+                        const row = document.createElement('tr');
+                        row.innerHTML = '<td colspan="5" class="no-data">No records found</td>';
+                        tbody.appendChild(row);
+                        return;
+                    }
+
+                    // Sort records by date and time
+                    records.sort((a, b) => {
+                        const dateA = new Date(`${a.date} ${a.time}`);
+                        const dateB = new Date(`${b.date} ${b.time}`);
+                        return dateB - dateA;
+                    });
+
                     records.forEach(record => {
                         const row = document.createElement('tr');
                         row.innerHTML = `
@@ -115,9 +140,30 @@
                 });
         }
 
-        // Add event listeners for filters
-        document.getElementById('classFilter').addEventListener('change', loadAttendance);
-        document.getElementById('subjectFilter').addEventListener('change', loadAttendance);
+        // Update subjects when class is selected
+        document.getElementById('classFilter').addEventListener('change', function() {
+            const classId = this.value;
+            const subjectFilter = document.getElementById('subjectFilter');
+            subjectFilter.innerHTML = '<option value="">All Subjects</option>';
+
+            if (classId) {
+                fetch(`${API_CONFIG.LECTURE_SERVICE}/api/lectures/class/${classId}`)
+                    .then(response => response.json())
+                    .then(lectures => {
+                        const subjects = [...new Set(lectures.map(l => l.subject))];
+                        subjects.forEach(subject => {
+                            const option = document.createElement('option');
+                            option.value = subject;
+                            option.textContent = subject;
+                            subjectFilter.appendChild(option);
+                        });
+                    })
+                    .catch(error => {
+                        console.error('Error loading subjects:', error);
+                        alert('Error loading subjects. Please try again.');
+                    });
+            }
+        });
 
         function logout() {
             sessionStorage.removeItem('isAdminLoggedIn');
